# oholeo-keyboard-v2-firmware

./: .gitmodules  CMakeLists.txt  README.md  app.yaml  oholeo-keyboard-v2.json  snake.js
boards/oholeo_keyboard_v2/: board.c  board.h  oholeo_keyboard_v2.yaml  pinmux.c  pinmux.h
bootloader/: CMakeLists.txt  uf2conv.py
bootloader/src/: main.c
include/: adc.h  gptmr.h  hpm_serial_nor_host_port.h  keyboard_conf.h  keyboard_config.h  pwm.h  qei.h  usb_config.h  usbd_user.h  ws2812.h
src/: adc.c  gptmr.c  hpm_serial_nor_host_port.c  keyboard_user.c  main.c  pwm.c  qei.c  usbd_user.c  ws2812.c
